docs/commerce/3.x/dev/element-queries/variant-queries.md
# Variant Queries

You can fetch variants using **variant queries**.

::: code
```twig
{# Create a new variant query #}
{% set myVariantQuery = craft.variants() %}
```
```php
// Create a new variant query
$myVariantQuery = \craft\commerce\elements\Variant::find();
```
```graphql
# Create a new variant query
{
  variants {
    # ...
  }
}
```
:::

Once you’ve created a variant query, you can set [parameters](#parameters) on it to narrow down the results, and then [execute it](https://docs.craftcms.com/v3/dev/element-queries/#executing-element-queries) by calling `.all()`. An array of [Variant](commerce3:craft\commerce\elements\Variant) objects will be returned.

::: tip
See [Introduction to Element Queries](https://docs.craftcms.com/v3/dev/element-queries/) in the Craft docs to learn about how element queries work.
:::

## Example

We can display a specific variant by its ID in Twig by doing the following:

1. Create a variant query with `craft.variants()`.
2. Set the [id](#id) parameter on it.
3. Fetch the variant with `.one()`.
4. Output information about the variant as HTML.

```twig
{# Get the requested variant ID from the query string #}
{% set variantId = craft.app.request.getQueryParam('id') %}

{# Create a variant query with the 'id' parameter #}
{% set myVariantQuery = craft.variants()
    .id(variantId) %}

{# Fetch the variant #}
{% set variant = myVariantQuery.one() %}

{# Make sure it exists #}
{% if not variant %}
    {% exit 404 %}
{% endif %}

{# Display the variant #}
<h1>{{ variant.title }}</h1>
<!-- ... -->
```

Fetching the equivalent with GraphQL could look like this:

```graphql
# Fetch variant having ID = 46
{  
  variants(id: 46) {
    title
  }
}
```

## Parameters

Variant queries support the following parameters:

<!-- BEGIN PARAMS -->

| Param                                     | Description
| ----------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
| [anyStatus](#anystatus)                   | Clears out the [status](#status) and [enabledForSite()](https://docs.craftcms.com/api/v3/craft-elements-db-elementquery.html#method-enabledforsite) parameters.
| [asArray](#asarray)                       | Causes the query to return matching variants as arrays of data, rather than [Variant](commerce3:craft\commerce\elements\Variant) objects.
| [clearCachedResult](#clearcachedresult)   | Clears the cached result.
| [dateCreated](#datecreated)               | Narrows the query results based on the variants’ creation dates.
| [dateUpdated](#dateupdated)               | Narrows the query results based on the variants’ last-updated dates.
| [fixedOrder](#fixedorder)                 | Causes the query results to be returned in the order specified by [id](#id).
| [hasProduct](#hasproduct)                 | Narrows the query results to only variants for certain products.
| [hasSales](#hassales)                     | Narrows the query results to only variants that are on sale.
| [hasStock](#hasstock)                     | Narrows the query results to only variants that have stock.
| [height](#height)                         | Narrows the query results based on the variants’ height dimension.
| [id](#id)                                 | Narrows the query results based on the variants’ IDs.
| [ignorePlaceholders](#ignoreplaceholders) | Causes the query to return matching variants as they are stored in the database, ignoring matching placeholder elements that were set by [craft\services\Elements::setPlaceholderElement()](https://docs.craftcms.com/api/v3/craft-services-elements.html#method-setplaceholderelement).
| [inReverse](#inreverse)                   | Causes the query results to be returned in reverse order.
| [isDefault](#isdefault)                   | Narrows the query results to only default variants.
| [length](#length)                         | Narrows the query results based on the variants’ length dimension.
| [limit](#limit)                           | Determines the number of variants that should be returned.
| [maxQty](#maxqty)                         | Narrows the query results based on the variants’ max quantity.
| [minQty](#minqty)                         | Narrows the query results based on the variants’ min quantity.
| [offset](#offset)                         | Determines how many variants should be skipped in the results.
| [orderBy](#orderby)                       | Determines the order that the variants should be returned in. (If empty, defaults to `sortOrder ASC`.)
| [preferSites](#prefersites)               | If [unique](#unique) is set, this determines which site should be selected when querying multi-site elements.
| [price](#price)                           | Narrows the query results based on the variants’ price.
| [product](#product)                       | Narrows the query results based on the variants’ product.
| [productId](#productid)                   | Narrows the query results based on the variants’ products’ IDs.
| [relatedTo](#relatedto)                   | Narrows the query results to only variants that are related to certain other elements.
| [search](#search)                         | Narrows the query results to only variants that match a search query.
| [site](#site)                             | Determines which site(s) the variants should be queried in.
| [siteId](#siteid)                         | Determines which site(s) the variants should be queried in, per the site’s ID.
| [sku](#sku)                               | Narrows the query results based on the variants’ SKUs.
| [status](#status)                         | Narrows the query results based on the variants’ statuses.
| [stock](#stock)                           | Narrows the query results based on the variants’ stock.
| [title](#title)                           | Narrows the query results based on the variants’ titles.
| [trashed](#trashed)                       | Narrows the query results to only variants that have been soft-deleted.
| [typeId](#typeid)                         | Narrows the query results based on the variants’ product types, per their IDs.
| [uid](#uid)                               | Narrows the query results based on the variants’ UIDs.
| [unique](#unique)                         | Determines whether only elements with unique IDs should be returned by the query.
| [weight](#weight)                         | Narrows the query results based on the variants’ weight dimension.
| [width](#width)                           | Narrows the query results based on the variants’ width dimension.
| [with](#with)                             | Causes the query to return matching variants eager-loaded with related elements.

### `anyStatus`

Clears out the [status](#status) and [enabledForSite()](https://docs.craftcms.com/api/v3/craft-elements-db-elementquery.html#method-enabledforsite) parameters.

::: code
```twig
{# Fetch all variants, regardless of status #}
{% set variants = craft.variants()
    .anyStatus()
    .all() %}
```

```php
// Fetch all variants, regardless of status
$variants = \craft\commerce\elements\Variant::find()
    ->anyStatus()
    ->all();
```
:::

### `asArray`

Causes the query to return matching variants as arrays of data, rather than [Variant](commerce3:craft\commerce\elements\Variant) objects.

::: code
```twig
{# Fetch variants as arrays #}
{% set variants = craft.variants()
    .asArray()
    .all() %}
```

```php
// Fetch variants as arrays
$variants = \craft\commerce\elements\Variant::find()
    ->asArray()
    ->all();
```
:::


### `clearCachedResult`

Clears the cached result.

### `dateCreated`

Narrows the query results based on the variants’ creation dates.

Possible values include:

| Value | Fetches variants…
| - | -
| `'>= 2018-04-01'` | that were created on or after 2018-04-01.
| `'< 2018-05-01'` | that were created before 2018-05-01
| `['and', '>= 2018-04-04', '< 2018-05-01']` | that were created between 2018-04-01 and 2018-05-01.

::: code
```twig
{# Fetch variants created last month #}
{% set start = date('first day of last month')|atom %}
{% set end = date('first day of this month')|atom %}

{% set variants = craft.variants()
    .dateCreated(['and', ">= #{start}", "< #{end}"])
    .all() %}
```

```php
// Fetch variants created last month
$start = (new \DateTime('first day of last month'))->format(\DateTime::ATOM);
$end = (new \DateTime('first day of this month'))->format(\DateTime::ATOM);

$variants = \craft\commerce\elements\Variant::find()
    ->dateCreated(['and', ">= {$start}", "< {$end}"])
    ->all();
```
:::

### `dateUpdated`

Narrows the query results based on the variants’ last-updated dates.

Possible values include:

| Value | Fetches variants…
| - | -
| `'>= 2018-04-01'` | that were updated on or after 2018-04-01.
| `'< 2018-05-01'` | that were updated before 2018-05-01
| `['and', '>= 2018-04-04', '< 2018-05-01']` | that were updated between 2018-04-01 and 2018-05-01.

::: code
```twig
{# Fetch variants updated in the last week #}
{% set lastWeek = date('1 week ago')|atom %}

{% set variants = craft.variants()
    .dateUpdated(">= #{lastWeek}")
    .all() %}
```

```php
// Fetch variants updated in the last week
$lastWeek = (new \DateTime('1 week ago'))->format(\DateTime::ATOM);

$variants = \craft\commerce\elements\Variant::find()
    ->dateUpdated(">= {$lastWeek}")
    ->all();
```
:::

### `fixedOrder`

Causes the query results to be returned in the order specified by [id](#id).

::: code
```twig
{# Fetch variants in a specific order #}
{% set variants = craft.variants()
    .id([1, 2, 3, 4, 5])
    .fixedOrder()
    .all() %}
```

```php
// Fetch variants in a specific order
$variants = \craft\commerce\elements\Variant::find()
    ->id([1, 2, 3, 4, 5])
    ->fixedOrder()
    ->all();
```
:::

### `hasProduct`

Narrows the query results to only variants for certain products.

Possible values include:

| Value | Fetches variants…
| - | -
| a [ProductQuery](commerce3:craft\commerce\elements\db\ProductQuery) object | for products that match the query.

### `hasSales`

Narrows the query results to only variants that are on sale.

Possible values include:

| Value | Fetches variants…
| - | -
| `true` | on sale
| `false` | not on sale

### `hasStock`

Narrows the query results to only variants that have stock.

Possible values include:

| Value | Fetches variants…
| - | -
| `true` | with stock.
| `false` | with no stock.

### `height`

Narrows the query results based on the variants’ height dimension.

::: code
```twig
{# Fetch all variants with a height greater than 100 #}
{% set variants = craft.variants()
    .height("> 100")
    .all() %}
```

```php
// Fetch all variants with a height greater than 100
$variants = \craft\commerce\elements\Variant::find()
    ->height("> 100")
    ->all();
```

```graphql
# Fetch all variants with a height greater than 100
{
  variants(height: "> 100") {
    # ...
  }
}
```
:::

::: tip
Querying variants by height will restrict the query to only those product types that have dimensions enabled.
:::

### `id`

Narrows the query results based on the variants’ IDs.

Possible values include:

| Value | Fetches variants…
| - | -
| `1` | with an ID of 1.
| `'not 1'` | not with an ID of 1.
| `[1, 2]` | with an ID of 1 or 2.
| `['not', 1, 2]` | not with an ID of 1 or 2.

::: code
```twig
{# Fetch the variant by its ID #}
{% set variant = craft.variants()
    .id(1)
    .one() %}
```

```php
// Fetch the variant by its ID
$variant = \craft\commerce\elements\Variant::find()
    ->id(1)
    ->one();
```
:::

::: tip
This can be combined with [fixedOrder](#fixedorder) if you want the results to be returned in a specific order.
:::

### `ignorePlaceholders`

Causes the query to return matching variants as they are stored in the database, ignoring matching placeholder
elements that were set by [craft\services\Elements::setPlaceholderElement()](https://docs.craftcms.com/api/v3/craft-services-elements.html#method-setplaceholderelement).

### `inReverse`

Causes the query results to be returned in reverse order.

::: code
```twig
{# Fetch variants in reverse #}
{% set variants = craft.variants()
    .inReverse()
    .all() %}
```

```php
// Fetch variants in reverse
$variants = \craft\commerce\elements\Variant::find()
    ->inReverse()
    ->all();
```
:::

### `isDefault`

Narrows the query results to only default variants.

::: code
```twig
{# Fetch default variants #}
{% set variants = {twig-function}
    .isDefault()
    .all() %}
```

```php
// Fetch default variants
$variants = \craft\commerce\elements\Variant::find()
    ->isDefault()
    ->all();
```
:::

### `length`

Narrows the query results based on the variants’ length dimension.

::: code
```twig
{# Fetch all variants with a length greater than 100 #}
{% set variants = craft.variants()
    .length("> 100")
    .all() %}
```

```php
// Fetch all variants with a length greater than 100
$variants = \craft\commerce\elements\Variant::find()
    ->length("> 100")
    ->all();
```

```graphql
# Fetch all variants with a length greater than 100
{
  variants(length: "> 100") {
    # ...
  }
}
```
:::

::: tip
Querying variants by length will restrict the query to only those product types that have dimensions enabled.
:::

### `limit`

Determines the number of variants that should be returned.

::: code
```twig
{# Fetch up to 10 variants  #}
{% set variants = craft.variants()
    .limit(10)
    .all() %}
```

```php
// Fetch up to 10 variants
$variants = \craft\commerce\elements\Variant::find()
    ->limit(10)
    ->all();
```
:::

### `maxQty`

Narrows the query results based on the variants’ max quantity.

Possible values include:

| Value | Fetches variants…
| - | -
| `100` | with a maxQty of 100.
| `'>= 100'` | with a maxQty of at least 100.
| `'< 100'` | with a maxQty of less than 100.

### `minQty`

Narrows the query results based on the variants’ min quantity.

Possible values include:

| Value | Fetches variants…
| - | -
| `100` | with a minQty of 100.
| `'>= 100'` | with a minQty of at least 100.
| `'< 100'` | with a minQty of less than 100.

### `offset`

Determines how many variants should be skipped in the results.

::: code
```twig
{# Fetch all variants except for the first 3 #}
{% set variants = craft.variants()
    .offset(3)
    .all() %}
```

```php
// Fetch all variants except for the first 3
$variants = \craft\commerce\elements\Variant::find()
    ->offset(3)
    ->all();
```
:::

### `orderBy`

Determines the order that the variants should be returned in. (If empty, defaults to `sortOrder ASC`.)

::: code
```twig
{# Fetch all variants in order of date created #}
{% set variants = craft.variants()
    .orderBy('dateCreated asc')
    .all() %}
```

```php
// Fetch all variants in order of date created
$variants = \craft\commerce\elements\Variant::find()
    ->orderBy('dateCreated asc')
    ->all();
```
:::

### `preferSites`

If [unique](#unique) is set, this determines which site should be selected when querying multi-site elements.

For example, if element “Foo” exists in Site A and Site B, and element “Bar” exists in Site B and Site C,
and this is set to `['c', 'b', 'a']`, then Foo will be returned for Site C, and Bar will be returned
for Site B.

If this isn’t set, then preference goes to the current site.

::: code
```twig
{# Fetch unique variants from Site A, or Site B if they don’t exist in Site A #}
{% set variants = craft.variants()
    .site('*')
    .unique()
    .preferSites(['a', 'b'])
    .all() %}
```

```php
// Fetch unique variants from Site A, or Site B if they don’t exist in Site A
$variants = \craft\commerce\elements\Variant::find()
    ->site('*')
    ->unique()
    ->preferSites(['a', 'b'])
    ->all();
```
:::

### `price`

Narrows the query results based on the variants’ price.

Possible values include:

| Value | Fetches variants…
| - | -
| `100` | with a price of 100.
| `'>= 100'` | with a price of at least 100.
| `'< 100'` | with a price of less than 100.

### `product`

Narrows the query results based on the variants’ product.

Possible values include:

| Value | Fetches variants…
| - | -
| a [Product](commerce3:craft\commerce\elements\Product) object | for a product represented by the object.

### `productId`

Narrows the query results based on the variants’ products’ IDs.

Possible values include:

| Value | Fetches variants…
| - | -
| `1` | for a product with an ID of 1.
| `[1, 2]` | for product with an ID of 1 or 2.
| `['not', 1, 2]` | for product not with an ID of 1 or 2.

### `relatedTo`

Narrows the query results to only variants that are related to certain other elements.

See [Relations](https://docs.craftcms.com/v3/relations.html) for a full explanation of how to work with this parameter.

::: code
```twig
{# Fetch all variants that are related to myCategory #}
{% set variants = craft.variants()
    .relatedTo(myCategory)
    .all() %}
```

```php
// Fetch all variants that are related to $myCategory
$variants = \craft\commerce\elements\Variant::find()
    ->relatedTo($myCategory)
    ->all();
```
:::

### `search`

Narrows the query results to only variants that match a search query.

See [Searching](https://docs.craftcms.com/v3/searching.html) for a full explanation of how to work with this parameter.

::: code
```twig
{# Get the search query from the 'q' query string param #}
{% set searchQuery = craft.app.request.getQueryParam('q') %}

{# Fetch all variants that match the search query #}
{% set variants = craft.variants()
    .search(searchQuery)
    .all() %}
```

```php
// Get the search query from the 'q' query string param
$searchQuery = \Craft::$app->request->getQueryParam('q');

// Fetch all variants that match the search query
$variants = \craft\commerce\elements\Variant::find()
    ->search($searchQuery)
    ->all();
```
:::

### `site`

Determines which site(s) the variants should be queried in.

The current site will be used by default.

Possible values include:

| Value | Fetches variants…
| - | -
| `'foo'` | from the site with a handle of `foo`.
| `['foo', 'bar']` | from a site with a handle of `foo` or `bar`.
| `['not', 'foo', 'bar']` | not in a site with a handle of `foo` or `bar`.
| a [craft\models\Site](https://docs.craftcms.com/api/v3/craft-models-site.html) object | from the site represented by the object.
| `'*'` | from any site.

::: tip
If multiple sites are specified, elements that belong to multiple sites will be returned multiple times. If you
only want unique elements to be returned, use [unique](#unique) in conjunction with this.
:::

::: code
```twig
{# Fetch variants from the Foo site #}
{% set variants = craft.variants()
    .site('foo')
    .all() %}
```

```php
// Fetch variants from the Foo site
$variants = \craft\commerce\elements\Variant::find()
    ->site('foo')
    ->all();
```
:::

### `siteId`

Determines which site(s) the variants should be queried in, per the site’s ID.

The current site will be used by default.

::: code
```twig
{# Fetch variants from the site with an ID of 1 #}
{% set variants = craft.variants()
    .siteId(1)
    .all() %}
```

```php
// Fetch variants from the site with an ID of 1
$variants = \craft\commerce\elements\Variant::find()
    ->siteId(1)
    ->all();
```
:::

### `sku`

Narrows the query results based on the variants’ SKUs.

Possible values include:

| Value | Fetches variants…
| - | -
| `'foo'` | with a SKU of `foo`.
| `'foo*'` | with a SKU that begins with `foo`.
| `'*foo'` | with a SKU that ends with `foo`.
| `'*foo*'` | with a SKU that contains `foo`.
| `'not *foo*'` | with a SKU that doesn’t contain `foo`.
| `['*foo*', '*bar*'` | with a SKU that contains `foo` or `bar`.
| `['not', '*foo*', '*bar*']` | with a SKU that doesn’t contain `foo` or `bar`.

::: code
```twig
{# Get the requested variant SKU from the URL #}
{% set requestedSlug = craft.app.request.getSegment(3) %}

{# Fetch the variant with that slug #}
{% set variant = craft.variants()
    .sku(requestedSlug|literal)
    .one() %}
```

```php
// Get the requested variant SKU from the URL
$requestedSlug = \Craft::$app->request->getSegment(3);

// Fetch the variant with that slug
$variant = \craft\commerce\elements\Variant::find()
    ->sku(\craft\helpers\Db::escapeParam($requestedSlug))
    ->one();
```
:::

### `status`

Narrows the query results based on the variants’ statuses.

Possible values include:

| Value | Fetches variants…
| - | -
| `'enabled'`  _(default)_ | that are enabled.
| `'disabled'` | that are disabled.

::: code
```twig
{# Fetch disabled variants #}
{% set variants = craft.variants()
    .status('disabled')
    .all() %}
```

```php
// Fetch disabled variants
$variants = \craft\commerce\elements\Variant::find()
    ->status('disabled')
    ->all();
```
:::

### `stock`

Narrows the query results based on the variants’ stock.

Possible values include:

| Value | Fetches variants…
| - | -
| `0` | with no stock.
| `'>= 5'` | with a stock of at least 5.
| `'< 10'` | with a stock of less than 10.

### `title`

Narrows the query results based on the variants’ titles.

Possible values include:

| Value | Fetches variants…
| - | -
| `'Foo'` | with a title of `Foo`.
| `'Foo*'` | with a title that begins with `Foo`.
| `'*Foo'` | with a title that ends with `Foo`.
| `'*Foo*'` | with a title that contains `Foo`.
| `'not *Foo*'` | with a title that doesn’t contain `Foo`.
| `['*Foo*', '*Bar*']` | with a title that contains `Foo` or `Bar`.
| `['not', '*Foo*', '*Bar*']` | with a title that doesn’t contain `Foo` or `Bar`.

::: code
```twig
{# Fetch variants with a title that contains "Foo" #}
{% set variants = craft.variants()
    .title('*Foo*')
    .all() %}
```

```php
// Fetch variants with a title that contains "Foo"
$variants = \craft\commerce\elements\Variant::find()
    ->title('*Foo*')
    ->all();
```
:::

### `trashed`

Narrows the query results to only variants that have been soft-deleted.

::: code
```twig
{# Fetch trashed variants #}
{% set variants = craft.variants()
    .trashed()
    .all() %}
```

```php
// Fetch trashed variants
$variants = \craft\commerce\elements\Variant::find()
    ->trashed()
    ->all();
```
:::

### `typeId`

Narrows the query results based on the variants’ product types, per their IDs.

Possible values include:

| Value | Fetches variants…
| - | -
| `1` | for a product of a type with an ID of 1.
| `[1, 2]` | for product of a type with an ID of 1 or 2.
| `['not', 1, 2]` | for product of a type not with an ID of 1 or 2.

### `uid`

Narrows the query results based on the variants’ UIDs.

::: code
```twig
{# Fetch the variant by its UID #}
{% set variant = craft.variants()
    .uid('xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx')
    .one() %}
```

```php
// Fetch the variant by its UID
$variant = \craft\commerce\elements\Variant::find()
    ->uid('xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx')
    ->one();
```
:::

### `unique`

Determines whether only elements with unique IDs should be returned by the query.

This should be used when querying elements from multiple sites at the same time, if “duplicate” results is not
desired.

::: code
```twig
{# Fetch unique variants across all sites #}
{% set variants = craft.variants()
    .site('*')
    .unique()
    .all() %}
```

```php
// Fetch unique variants across all sites
$variants = \craft\commerce\elements\Variant::find()
    ->site('*')
    ->unique()
    ->all();
```
:::

### `weight`

Narrows the query results based on the variants’ weight dimension.

::: code
```twig
{# Fetch all variants with a weight greater than 100 #}
{% set variants = craft.variants()
    .weight("> 100")
    .all() %}
```

```php
// Fetch all variants with a weight greater than 100
$variants = \craft\commerce\elements\Variant::find()
    ->weight("> 100")
    ->all();
```

```graphql
# Fetch all variants with a weight greater than 100
{
  variants(weight: "> 100") {
    # ...
  }
}
```
:::

::: tip
Querying variants by weight will restrict the query to only those product types that have dimensions enabled.
:::

### `width`

Narrows the query results based on the variants’ width dimension.

::: code
```twig
{# Fetch all variants with a width greater than 100 #}
{% set variants = craft.variants()
    .width("> 100")
    .all() %}
```

```php
// Fetch all variants with a width greater than 100
$variants = \craft\commerce\elements\Variant::find()
    ->width("> 100")
    ->all();
```

```graphql
# Fetch all variants with a width greater than 100
{
  variants(width: "> 100") {
    # ...
  }
}
```
:::

::: tip
Querying variants by width will restrict the query to only those product types that have dimensions enabled.
:::

### `with`

Causes the query to return matching variants eager-loaded with related elements.

See [Eager-Loading Elements](https://docs.craftcms.com/v3/dev/eager-loading-elements.html) for a full explanation of how to work with this parameter.

::: code
```twig
{# Fetch variants eager-loaded with the "Related" field’s relations #}
{% set variants = craft.variants()
    .with(['related'])
    .all() %}
```

```php
// Fetch variants eager-loaded with the "Related" field’s relations
$variants = \craft\commerce\elements\Variant::find()
    ->with(['related'])
    ->all();
```
:::

<!-- END PARAMS -->
